# wikipedia-extractor

./: .gitignore  Dockerfile  README.md  docker_build.sh  docker_run.sh  pyproject.toml  run_lint.sh  run_test.sh  setup.cfg
config/: settings.yaml
tests/: test_wikipedia_extractor.py
tests/extract/: test_content.py  test_general.py
wikipedia_extractor/extract/: content.py  general.py
