[tool.poetry]
name = "wikipedia_extractor"
version = "0.1.0"
description = ""
authors = ["Kazutaka Ohashi <ichitadon@xenodata-lab.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wikitextparser = "^0.47.5"
numpy = "^1.21.1"
pandas = "^1.3.0"
autoflake = "^1.4"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
isort = "*"
mypy = "*"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
