[tool.poetry]
name = "wikipedia_extractor"
version = "0.1.0"
description = ""
authors = ["Kazutaka Ohashi <ichitadon@xenodata-lab.com>"]

[tool.poetry.dependencies]
python = "^3.11"
wikitextparser = "^0.53.0"
numpy = "^1.25.2"
pandas = "^2.0.1"
PyYAML = "^6.0.1"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
isort = "*"
mypy = "*"
autoflake = "^2.2"
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
